# NanoHarness

./: .gitignore  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt
configs/: mcp_servers.json
configs/scripts/: file_edit.sh  file_find.sh  git_branch_create.sh  git_branch_list.sh  git_init.sh  git_log.sh  git_push.sh  git_revert.sh  git_stash.sh  git_stash_list.sh  git_stash_pop.sh  git_status.sh  shell_exec.sh  you_search.sh
examples/coding_agent/: .gitignore  FORK_NOTES.md  NanoCA.md  README.md  main.py  nanoharness
examples/coding_agent/app/: __init__.py  adapters.py  background.py  builder.py  coding_evaluator.py  context.py  dispatch.py  handlers.py  hooks.py  mcp.py  memory.py  permissions.py  prompt_builder.py  prompts.yaml  resilient_llm.py  scheduler.py  skills.py  subagent.py  task_system.py  team.py  tools.py  ui.py  worktree.py
examples/coding_agent/configs/: prompts.yaml
examples/coding_agent/skills/: code-review.md  debugging.md  refactoring.md  test-writing.md
examples/coding_agent/tests/: conftest.py  test_background.py  test_dispatch.py  test_example_smoke.py  test_hooks.py  test_mcp.py  test_scheduler.py  (+7 more)
nanoharness/: __init__.py
nanoharness/components/: __init__.py
nanoharness/core/: __init__.py  base.py  engine.py  prompt.py  schema.py
nanoharness/utils/: logger.py
tests/: conftest.py  test_dict_registry.py  test_engine.py  test_json_store.py  test_mcp.py  test_memory.py  test_permissions.py  test_schema.py  test_script_tools.py  test_simple_context.py  test_simple_hooks.py  test_trace_evaluator.py  test_utils.py
(+79 files in other folders)
